Fixed apperance on mobile phones

--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -6,7 +6,7 @@ body {
   background-size: cover;
   color: white;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
-  font-size: 16px;
+  font-size: 12px;
 }
 
 h1 {
@@ -38,10 +38,10 @@ img:hover {
 
 button {
   display: inline-block;
-  height: 5vh;
-  width: 200px;
+  height: 20px;
+  width: 150px;
   text-transform: uppercase;
-  font-size: 1.5rem;
+  font-size: 1rem;
   margin: 10px auto;
   background-color: #22304b;
   border: 1.5px solid white;
@@ -65,13 +65,26 @@ a:hover {
   color: #384e7c;
 }
 
+hr {
+  border: none;
+  width: 100%;
+}
+
 .App {
   width: 100%;
   min-height: 100vh;
 }
 
 @media (min-width: 700px) {
+  body {
+    font-size: 16px;
+  }
   img {
     width: 20vh;
+  }
+  button {
+    height: 50px;
+    width: 250px;
+    font-size: 1.5rem;
   }
 }
